--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -17,23 +17,8 @@
    */
   min-width: 0;
 
-  // Custom color scheme for the toolbar
-  //
-  // See _variables.scss for documentation on the variables themselves.
-  --text-color: #ffffff;
-  --background-color: #3b3f46;
-
-  --box-border-color: #202020;
-
-  --box-hover-background-color: #40454D;
-  --box-hover-text-color: #ffffff;
-
-  // Invert text and background for selected buttons
-  --box-selected-background-color: #ffffff;
-  --box-selected-text-color: #3b3f46;
-
-  color: var(--text-color);
-  background-color: var(--background-color);
+  color: var(--toolbar-text-color);
+  background-color: var(--toolbar-background-color);
 
   @include win32 {
     -webkit-app-region: drag;
@@ -42,8 +27,7 @@
 
   .sidebar-section {
 
-    --background-color: #272A2F;
-    background-color: var(--background-color);
+    background-color: var(--toolbar-sidebar-background-color);
 
     display: flex;
     flex-direction: row;
