Try fixing the branch button at 220px

--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -36,6 +36,12 @@
       flex-grow: 1;
     }
   }
+
+  .toolbar-button {
+    &.branch-button {
+      width: 220px;
+    }
+  }
 }
 
 /* Toolbar negative margin hackery
