--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -31,6 +31,8 @@
   --button-background: $lightGray;
   --button-hover-background: $white;
 
+  --link-button-color: $blue;
+
   // Typography
   //
   // Font, line-height, and color for body text, headings, and more.
