--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -31,6 +31,10 @@ input[type='submit'] {
   &:disabled { opacity: 0.3; }
 }
 
+a.link-button-component:visited {
+  color: var(--link-button-color);
+}
+
 a.link-button-component {
-  color: blue;
+  color: var(--link-button-color);
 }
