--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -1,30 +1,52 @@
+@import '../mixins';
+
 #branches {
   padding: var(--spacing);
   height: 100%;
+  width: 350px;
 }
 
-.branches-list-container {
-  height: 100%;
-  display: flex;
+.branches-list {
+  &-container {
+    height: 100%;
+    display: flex;
+  }
 
-  .branches-list-content {
+  &-content {
     display: flex;
     flex: 1;
-
-    padding: var(--spacing-third) var(--spacing);
-    font-size: var(--font-size-sm);
   }
-}
 
-.branches-list-item,
-.branches-list-label {
-  flex-grow: 1;
-}
+  &-label {
+    flex-grow: 1;
+    padding-top: 5px;
+    margin-top: var(--spacing);
+    font-size: var(--font-size-sm);
+    color: var(--text-secondary-color);
+  }
 
-.branches-list-label {
-  opacity: 0.6;
-  padding: 0 5px 0 20px;
-  margin-top: var(--spacing);
+  &-item {
+    display: flex;
+    flex-direction: row;
+    min-width: 0;
+    flex-grow: 1;
+    align-items: center;
+
+    .icon {
+      margin-right: var(--spacing-half);
+    }
+
+    .name {
+      flex-grow: 1;
+      @include ellipsis;
+    }
+
+    .description {
+      margin-right: var(--spacing-half);
+      color: var(--text-secondary-color);
+      font-size: var(--font-size-sm);
+    }
+  }
 }
 
 .branch-filter-input {
