--- a/app/styles/ui/_buttons.scss
+++ b/app/styles/ui/_buttons.scss
@@ -19,8 +19,10 @@ input[type='submit'],
     background-color: var(--button-hover-background);
   }
 
+  // `!important` is needed here because the :hover pseudo-selector
+  // takes precedence
   &:active {
-    background-color: var(--button-active-background);
+    background-color: var(--button-active-background) !important;
   }
 
   &:focus {
