600px ought to be perfect for everyone

--- a/app/styles/ui/_cloning-repository-view.scss
+++ b/app/styles/ui/_cloning-repository-view.scss
@@ -5,7 +5,7 @@
   /* The view's position in relation to its parent, ie full
    * width, vertically centered  */
   align-self: center;
-  max-width: 600px;
+  width: 600px;
   margin: 0 auto;
 
   /* TODO: Revisit, this might not be the best way to do it.
