--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -61,11 +61,12 @@
   padding-left: var(--spacing-half);
   padding-right: var(--spacing-half);
 
+  font-size: var(--font-size-xs);
+
   span {
     display: flex;
     align-items: center;
 
-    font-size: var(--font-size-sm);
     padding: var(--spacing-third);
   }
 }
