Margin between and around ahead/behind

--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -68,7 +68,17 @@
     display: flex;
     align-items: center;
 
-    padding: var(--spacing-third);
+    // Only add left margin if both ahead and behind are
+    // showing at the same time.
+    &:nth-child(2) { margin-left: var(--spacing-third); }
+
+    // We're using arrowSmallUp and arrowSmallDown which are
+    // both exactly 6px wide. Let's use that so that spacing
+    // gets easier to reason about.
+    .octicon {
+      width: 6px;
+      margin-left: var(--spacing-third);
+    }
   }
 }
 
