--- a/app/styles/ui/toolbar/_toolbar.scss
+++ b/app/styles/ui/toolbar/_toolbar.scss
@@ -38,9 +38,8 @@
   }
 
   .toolbar-button {
-    &.branch-button {
-      width: 220px;
-    }
+    &.branch-button { width: 220px; }
+    &.push-pull-button { min-width: 200px; }
   }
 }
 
