Remove byline from commit-meta-item

--- a/app/styles/ui/history/_commit-summary.scss
+++ b/app/styles/ui/history/_commit-summary.scss
@@ -47,6 +47,7 @@
     @include ellipsis;
     flex: 1 0 max-content;
     margin-right: var(--spacing);
+    font-size: var(--font-size-sm);
 
     .octicon {
       margin-right: var(--spacing-third);
