--- a/app/styles/ui/_list.scss
+++ b/app/styles/ui/_list.scss
@@ -58,11 +58,17 @@
   height: 100%;
 
   &.selected {
-    color: var(--box-selected-text-color);
+    --text-color: var(--box-selected-text-color);
+    --text-secondary-color: var(--box-selected-text-color);
+
+    color: var(--text-color);
     background-color: var(--box-selected-background-color);
 
     &:focus {
-      color: var(--box-selected-active-text-color);
+      --text-color: var(--box-selected-active-text-color);
+      --text-secondary-color: var(--box-selected-active-text-color);
+
+      color: var(--text-color);
       background-color: var(--box-selected-active-background-color);
     }
   }
