I still don't get flexbox

--- a/app/styles/ui/_welcome.scss
+++ b/app/styles/ui/_welcome.scss
@@ -47,7 +47,8 @@
     margin: var(--spacing-double) 0;
 
     button {
-      margin: var(--spacing-half);
+      margin: 0 var(--spacing-half);
+      flex: 1;
     }
   }
 }
