moved file list styles out to standalone stylesheet

--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -3,6 +3,7 @@
 @import "ui/buttons";
 @import "ui/scroll";
 @import "ui/window/title-bar";
+@import "ui/file-list";
 @import "ui/octicons";
 @import "ui/list";
 @import "ui/repository-list";
