Red is the new red

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -12,7 +12,7 @@
   // used outside of this scope.
   $blue: #3d76c2;
   $yellow: #d0b44c;
-  $red: #d0b44c;
+  $red: #bf2b00;
   $green: #6cc644;
   $darkGray: #5f717f;
   $darkerGray: #3b3f46;
