--- a/app/styles/ui/_welcome.scss
+++ b/app/styles/ui/_welcome.scss
@@ -59,6 +59,7 @@
 
 .welcome-text {
   font-size: 16px;
+  width: 430px;
 }
 
 .welcome-button {
@@ -112,7 +113,7 @@
 .sign-in-form {
   display: flex;
   flex-direction: column;
-  margin: var(--spacing-double) 0;
+  margin: var(--spacing-double) auto;
   width: 320px;
 }
 
