--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -120,3 +120,13 @@
     }
   }
 }
+
+#desktop-app-title-bar.light-title-bar {
+  @include darwin {
+    height: var(--darwin-title-bar-height);
+    z-index: 1;
+
+    background: transparent;
+    border-bottom: none;
+  }
+}
