Add styles for light titlebar on Windows

--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -129,4 +129,32 @@
     background: transparent;
     border-bottom: none;
   }
+
+  .window-controls {
+    svg {
+      fill: #000;
+    }
+
+    button {
+      &:hover {
+        background-color: #e5e5e5;
+
+        &:active {
+          background-color: #cccccc;
+        }
+      }
+
+      &.close:hover {
+        background-color: #e81123;
+
+        svg {
+          fill: #fff;
+        }
+
+        &:active {
+          background-color: #f1707a;
+        }
+      }
+    }
+  }
 }
