--- a/app/styles/ui/toolbar/_button.scss
+++ b/app/styles/ui/toolbar/_button.scss
@@ -1,5 +1,9 @@
 .toolbar-button {
 
+  // Make sure the contents shrink beyond their intrinsic width
+  // See https://css-tricks.com/flexbox-truncated-text/
+  min-width: 0;
+
   // General button behavior, mostly resets.
   // For the button content styling see second button style. Note that we
   // explicitly use > here to only target the direct descendant button since
