Fix pane border

--- a/app/styles/ui/_app-menu.scss
+++ b/app/styles/ui/_app-menu.scss
@@ -18,6 +18,10 @@
     height: 100%;
     width: 200px;
     padding-top: var(--spacing);
+
+    &:not(:last-child) {
+      border-right: var(--base-border);
+    }
   }
 
   .menu-item {
