Menu item contents centered vertically

--- a/app/styles/ui/_app-menu.scss
+++ b/app/styles/ui/_app-menu.scss
@@ -24,7 +24,10 @@
   }
 
   .menu-item {
+
     display: flex;
+    align-items: center;
+
     width: 100%;
     min-width: 0;
     margin-left: var(--spacing-double);
