Variablize all the things!

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -58,6 +58,7 @@
   --font-size: 13px;
   --font-size-sm: 11px;
   --font-size-md: 16px;
+  --font-size-lg: 28px;
   --font-size-xl: 32px;
 
   /** Extra small font size, be very conservative with the use of this */
