--- a/app/styles/ui/_app-menu.scss
+++ b/app/styles/ui/_app-menu.scss
@@ -18,6 +18,9 @@
     height: 100%;
     width: 240px;
 
+    // Open panes (except the first one) should have a border on their
+    // right hand side to create a divider between them and their parent
+    // menu.
     &:not(:first-child) {
       border-left: var(--base-border);
     }
@@ -40,6 +43,9 @@
     }
   }
 
+  // No focus outline for the list itself. When the app menu is opened without
+  // an initial selection the list is given focus so that up/down arrow keys
+  // will work.
   .ReactVirtualized__Grid:focus {
     outline: none;
   }
