Render accelerator keys

--- a/app/styles/ui/_app-menu.scss
+++ b/app/styles/ui/_app-menu.scss
@@ -74,6 +74,12 @@
       margin-right: var(--spacing);
     }
 
+    .accelerator {
+      flex-shrink: 0;
+      margin-right: var(--spacing);
+      color: var(--text-secondary-color);
+    }
+
     &.separator {
       border-bottom: var(--base-border);
     }
