Highlight and open the app menu when Alt is pressed

--- a/app/styles/ui/_app-menu.scss
+++ b/app/styles/ui/_app-menu.scss
@@ -8,6 +8,10 @@
   .icon {
     margin: 0 var(--spacing);
   }
+
+  &.highlight {
+    background: var(--toolbar-button-hover-background-color);
+  }
 }
 
 #app-menu-foldout {
