--- a/app/styles/ui/_form.scss
+++ b/app/styles/ui/_form.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  .input-component:not(:last-of-type) {
-    padding-bottom: var(--spacing);
+  & > *:not(:last-of-type) {
+    margin-bottom: var(--spacing);
   }
 }
