--- a/app/styles/ui/_form.scss
+++ b/app/styles/ui/_form.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  & > *:not(:last-of-type) {
+  & > *:not(:last-child) {
     margin-bottom: var(--spacing);
   }
 }
