Borrow this from _forms

--- a/app/styles/ui/_form.scss
+++ b/app/styles/ui/_form.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
 
+  margin: var(--spacing-half) 0;
+
   & > *:not(:last-child) {
     margin-bottom: var(--spacing);
   }
