Convert Authentication to the new stuff

--- a/app/styles/ui/_welcome.scss
+++ b/app/styles/ui/_welcome.scss
@@ -91,6 +91,10 @@
   width: 200px;
 }
 
+.password-container {
+  position: relative;
+}
+
 .forgot-password-link {
   position: absolute;
   top: 0;
