We just say TextBox

--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -27,6 +27,6 @@
 @import "ui/foldout";
 @import "ui/update-available";
 @import "ui/form";
-@import "ui/input";
+@import "ui/text-box";
 @import "ui/button";
 @import "ui/select";
