--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -28,6 +28,8 @@
   --text-secondary-color: #8A9499;
   --background-color: $white;
 
+  --button-height: 28px;
+
   --button-background: $blue;
   --button-hover-background: lighten($blue, 5%);
   --button-text-color: $white;
