--- a/app/styles/ui/_text-box.scss
+++ b/app/styles/ui/_text-box.scss
@@ -1,15 +1,19 @@
 .text-box-component {
   display: flex;
   flex-direction: column;
+  flex: 1;
 
   input {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+
     border: 1px solid var(--box-border-color);
     border-radius: var(--border-radius);
     color: currentColor;
     font-size: var(--font-size);
     font-family: var(--font-family-sans-serif);
     padding: var(--spacing-half);
-    flex: 1;
     margin-right: var(--spacing);
 
     resize: none;
