--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -1,6 +1,5 @@
 @import "ui/app";
 @import "ui/app-menu";
-@import "ui/forms";
 @import "ui/scroll";
 @import "ui/window/title-bar";
 @import "ui/file-list";
@@ -33,3 +32,4 @@
 @import "ui/row";
 @import "ui/text-area";
 @import "ui/checkbox";
+@import "ui/errors";
