--- a/app/styles/ui/_errors.scss
+++ b/app/styles/ui/_errors.scss
@@ -1,4 +1,4 @@
-.form-errors {
+.errors-component {
   background: var(--form-error-background);
   border: 1px solid var(--form-error-border-color);
   border-radius: var(--border-radius);
