--- a/app/styles/ui/_repository-list.scss
+++ b/app/styles/ui/_repository-list.scss
@@ -2,6 +2,9 @@
 
 /** A <List> React component holding all tracked repositories in the sidebar */
 #repository-list {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   /**
    * Container for repository list items in the sidebar
