--- a/app/styles/ui/_repository-list.scss
+++ b/app/styles/ui/_repository-list.scss
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: column;
 
+  .filter-field {
+    padding-left: var(--spacing);
+    padding-right: var(--spacing);
+  }
+
   /**
    * Container for repository list items in the sidebar
    *
