--- a/app/styles/ui/changes/_changes-list.scss
+++ b/app/styles/ui/changes/_changes-list.scss
@@ -18,7 +18,7 @@
     flex-grow: 0;
     padding: var(--spacing-half);
 
-    label {
+    .changed-files-count {
       font-weight: var(--font-weight-semibold);
       flex-grow: 1;
       text-align: center;
