--- a/app/styles/ui/_popup.scss
+++ b/app/styles/ui/_popup.scss
@@ -6,9 +6,6 @@
   margin: var(--spacing-triple) var(--spacing);
   background-color: var(--box-alt-background-color);
   position: absolute;
-  border: var(--base-border);
-  border-radius: var(--border-radius);
-  box-shadow: 0 0 7px rgba(0,0,0,0.15);
   z-index: var(--popup-z-index);
 
   top: 50%;
@@ -52,4 +49,8 @@
 
 .popup-overlay {
   z-index: var(--popup-overlay-z-index);
+
+  background: black;
+  opacity: 0.4;
+  height: 100%;
 }
