--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -187,26 +187,25 @@
 // ***************************************************************************************************************************
 
 #diff .submodule-header {
-  margin: var(--spacing-half) var(--spacing)
+  margin: var(--spacing-half) var(--spacing);
 }
 
 #diff .submodule-changes {
 
-  margin-left: 24px;
-  margin-right: 24px;
+  margin: 0px var(--spacing-triple);
 
   .stats {
     text-align: right;
-    padding-right: 8px;
+    padding-right: var(--spacing);
     box-sizing: border-box
   }
 
   .added {
-    color: (#55a532);
+    color: var(--diff-submodule-add-text-color);
   }
 
   .removed {
-    color: (#bd2c00);
+    color: var(--diff-submodule-remove-text-color);
   }
 
   .icon {
