Styling for disabled menu items

--- a/app/styles/ui/_app-menu.scss
+++ b/app/styles/ui/_app-menu.scss
@@ -63,6 +63,8 @@
     width: 100%;
     min-width: 0;
 
+    &.disabled { opacity: 0.3; }
+
     .label {
       flex-grow: 1;
       margin-left: var(--spacing-double);
