Add a path text component
Renders normalized paths suitable for platform.

Styles directory components different from file names

--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -26,6 +26,7 @@
 @import "ui/foldout";
 @import "ui/update-available";
 @import "ui/preferences";
+@import "ui/path-text";
 @import "ui/configure-git-user";
 @import "ui/form";
 @import "ui/text-box";
