--- a/app/styles/ui/_branches.scss
+++ b/app/styles/ui/_branches.scss
@@ -1,11 +1,14 @@
 @import '../mixins';
 
 #branches {
-  padding: var(--spacing);
   height: 100%;
   width: 350px;
   display: flex;
   flex-direction: column;
+
+  .row-component {
+    padding: var(--spacing);
+  }
 }
 
 .branches-list {
@@ -17,6 +20,11 @@
   &-content {
     display: flex;
     flex: 1;
+  }
+
+  &-label,
+  &-item {
+    padding: 0 var(--spacing);
   }
 
   &-label {
