A little breathing room between paths and icons

--- a/app/styles/ui/_file-list.scss
+++ b/app/styles/ui/_file-list.scss
@@ -34,6 +34,7 @@
     .path {
       flex-grow: 1;
       min-width: 0;
+      margin-right: var(--spacing-half);
     }
 
     .octicon { vertical-align: text-bottom; }
