Ensure checkbox always takes up exactly 20px

--- a/app/styles/ui/_file-list.scss
+++ b/app/styles/ui/_file-list.scss
@@ -29,6 +29,18 @@
     // See https://css-tricks.com/flexbox-truncated-text/
     min-width: 0;
 
+    .checkbox-component {
+      flex-shrink: 0;
+      align-items: center;
+      width: 20px;
+      margin: 0;
+      margin-left: var(--spacing-half);
+
+      input {
+        margin: 0;
+      }
+    }
+
     input, .status { flex-shrink: 0; }
 
     .path {
