--- a/app/styles/ui/changes/_changes-list.scss
+++ b/app/styles/ui/changes/_changes-list.scss
@@ -18,6 +18,18 @@
     flex-grow: 0;
     padding: var(--spacing-half);
 
+    .checkbox-component {
+      flex-shrink: 0;
+      align-items: center;
+      width: 20px;
+      margin: 0;
+      margin-left: var(--spacing-half);
+
+      input {
+        margin: 0;
+      }
+    }
+
     .changed-files-count {
       font-weight: var(--font-weight-semibold);
       flex-grow: 1;
