No focus outline for title bar buttons

--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -67,6 +67,8 @@
       background-color: transparent;
       transition: background-color 0.25s ease;
 
+      &:focus { outline: none; }
+
       &:hover {
         background-color: #888;
         color: #fff;
